// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test PolygonOptions should render correctly 1`] = `
<div>
  <div>
    <div
      class="polygon-sides"
    >
      <div
        class="label"
        title="Sides"
      >
        <svgr-url />
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly 2`] = `
<div>
  <div>
    <div
      class="polygon-sides"
    >
      <div
        class="label"
        title="Sides"
      >
        <svgr-url />
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly 3`] = `
<div>
  <div>
    <div
      class="polygon-sides"
    >
      <div
        class="label"
        title="Sides"
      >
        <svgr-url />
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="8"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly 4`] = `
<div>
  <div>
    <div
      class="polygon-sides"
    >
      <div
        class="label"
        title="Sides"
      >
        <svgr-url />
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly in mobile 1`] = `
<div>
  <div
    class="object-panel-item"
    id="polygon-sides"
  >
    <div
      class="main"
    >
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item"
        type="button"
      >
        <span>
          5
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Sides
    </div>
  </div>
</div>
`;

exports[`test PolygonOptions should render correctly in mobile 2`] = `
<div>
  <div
    class="object-panel-item"
    id="polygon-sides"
  >
    <div
      class="main"
    >
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item"
        type="button"
      >
        <span>
          5
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Sides
    </div>
  </div>
</div>
`;
